objects/Site_Event__c.object
<CustomObject>
    <description>Analytics event on a Force.com site (ie click, download)</description>
    <fields>
        <fullName>Action__c</fullName>
        <externalId>true</externalId>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <externalId>true</externalId>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <label>Media Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Category__c</columns>
        <columns>Count__c</columns>
        <columns>Date__c</columns>
        <columns>Media_Code__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>